Fix some spacing issues
See #61

--- a/src/_includes/assets/css/components.header.css
+++ b/src/_includes/assets/css/components.header.css
@@ -3,7 +3,7 @@
 .header--panel {
   margin-bottom: 1.625rem;
   padding-bottom: 1rem;
-  padding-top: 1.5rem;
+  padding-top: 1.25rem;
 }
 
 .header--desktop,
