--- a/src/_includes/assets/css/components.panel.css
+++ b/src/_includes/assets/css/components.panel.css
@@ -22,3 +22,7 @@
 .thinking {
   background-color: var(--color-grey-light);
 }
+
+.panel--profile .prose > *:first-child {
+  margin-top: 0;
+}
