--- a/src/_includes/assets/css/layout.css
+++ b/src/_includes/assets/css/layout.css
@@ -1,7 +1,7 @@
 .article--single {
   margin-bottom: 3.125rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .article .prose > * {
